endless scrolling, room, business, 2 grid column

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RateMyFood</string>
+    <string name="search_text_input">Enter type of restaurant or food.</string>
+    <string name="bussiness_error_message">Something went wrong</string>
 </resources>
